--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -4,8 +4,9 @@
   left: 0;
   z-index: 999;
   width: 100%;
-  background: $secondaryCl;
+  background: beige;
   color: $primaryCl;
+  border-bottom: 1px solid gray;
 
   .header__navbar {
     justify-content: space-between;
